quang pull code

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=datnquyet
+DB_DATABASE=quang-duantotnghiep
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=quangvph44802@fpt.edu.vn
-MAIL_PASSWORD=cndbeeyruuzzefma
+MAIL_USERNAME=nguyendo20052004@gmail.com
+MAIL_PASSWORD=bmqhpdxqezktjwpn
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=quangvph44802@fpt.edu.vn
+MAIL_FROM_ADDRESS=nguyendo20052004@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
